<resources>
    <string name="app_name">TPLeBonCoin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="activityMainTitle">Annonces</string>
    <string name="activityCreateAdTitle">Deposer une annonce</string>
    <string name="activityEditAdTitle">Modifier une annonce</string>

    <string name="adNameTint">Nom de l\'annonce</string>
    <string name="adAddressTint">Adresse</string>

    <string name="submitBtn">Publier l\'annonce</string>
    <string name="editBtn">Modifer l\'annonce</string>
    <string name="editImageGaleryBtn">Galerie</string>
    <string name="editImageCameraBtn">Caméra</string>
    <string name="adPriceTint">Prix</string>
    <string name="errorMissingImage">Vous devez choisir une image</string>
    <string name="errorMissingFields">Tous les champs doivent être remplis.</string>
    <string name="adPhoneTint">Téléphone</string>
</resources>