<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E2F3"
    tools:context=".CreateAdActivity">


    <TextView
        android:id="@+id/adViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/AGRESSIVE"
        android:text="@string/activityCreateAdTitle"
        android:textAlignment="center"
        android:textColor="@color/Bleu_marine"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"


        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adViewTitle"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/previewImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:maxHeight="160dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adViewTitle"></com.google.android.material.imageview.ShapeableImageView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editCameraImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bebasneue"
                android:text="@string/editImageCameraBtn"
                android:textColor="@color/Bleu_marine"
                android:textSize="16sp"
                app:backgroundTint="#D8C5F6"
                app:icon="@drawable/baseline_add_a_photo_24"
                app:iconGravity="textTop"
                app:iconSize="50dp"
                app:iconTint="@color/Bleu_marine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/editGaleryImageBtn"
                app:layout_constraintTop_toBottomOf="@id/previewImage">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editGaleryImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bebasneue"
                android:text="@string/editImageGaleryBtn"
                android:textColor="@color/Bleu_marine"
                android:textSize="16sp"
                app:backgroundTint="#D8C5F6"
                app:icon="@drawable/baseline_photo_24"
                app:iconGravity="textTop"
                app:iconSize="50dp"
                app:iconTint="@color/Bleu_marine"
                app:layout_constraintLeft_toRightOf="@id/editCameraImageBtn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewImage">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/labelTitle"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/adNameTint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editGaleryImageBtn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/formAdTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ECE5F6"
                    android:fontFamily="@font/kenyancoffee"
                    android:foregroundTint="#00D8A0A0"
                    android:inputType="text"
                    android:textColor="@color/Bleu_marine"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/labelAddress"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:hint="@string/adAddressTint"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"


                app:layout_constraintTop_toBottomOf="@id/labelTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/formAdAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#EBE4F5"
                    android:fontFamily="@font/kenyancoffee"
                    android:inputType="text"
                    android:textColor="@color/Bleu_marine"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/labelPrice"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:hint="@string/adPriceTint"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"


                app:layout_constraintTop_toBottomOf="@id/labelAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/formAdPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="#EBE4F5"
                    android:fontFamily="@font/kenyancoffee"
                    android:inputType="numberDecimal"
                    android:textColor="@color/Bleu_marine"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/labelPhone"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:hint="@string/adPhoneTint"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"


                app:layout_constraintTop_toBottomOf="@id/labelPrice">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/formAdPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="#EAE3F4"
                    android:fontFamily="@font/kenyancoffee"
                    android:inputType="phone"
                    android:textColor="@color/Bleu_marine"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bebasneue"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/submitBtn"
                android:textAlignment="center"
                android:textColor="@color/Bleu_marine"
                android:textSize="24sp"
                app:backgroundTint="#D6C3F4"
                app:iconTint="@color/Bleu_marine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelPhone">

            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>